--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@splidejs/splide": "^4.1.4",
-        "@splidejs/splide-extension-auto-scroll": "^0.5.3"
+        "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+        "lightbox2": "^2.11.4"
     }
 }
